--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -31,5 +31,15 @@
         android:id="@+id/circleButton"
         />
 
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Timer"
+        android:id="@+id/textTimer"
+        android:layout_above="@+id/circleButton2"
+        android:layout_centerHorizontal="true"
+        android:layout_marginBottom="63dp"
+        android:textSize="20sp" />
+
 
 </RelativeLayout>
