--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -3,22 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
-    android:paddingBottom="@dimen/activity_vertical_margin"
     tools:context=".MainActivity">
-
-    <at.markushi.ui.CircleButton
-        android:layout_width="180dip"
-        android:layout_height="180dip"
-        android:src="@drawable/ic_action_tick"
-        app:cb_color="#ff10cc0b"
-        app:cb_pressedRingWidth="8dip"
-        android:layout_centerVertical="true"
-        android:layout_centerHorizontal="true"
-        android:id="@+id/circleButton2"
-        />
 
     <at.markushi.ui.CircleButton
         android:layout_width="180dip"
@@ -29,17 +14,43 @@
         android:layout_centerVertical="true"
         android:layout_centerHorizontal="true"
         android:id="@+id/circleButton"
-        />
+        android:adjustViewBounds="false"
+        android:clickable="false" />
+
+    <ProgressBar
+        style="?android:attr/progressBarStyleHorizontal"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/progressBar"
+        android:layout_alignParentTop="true" />
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Timer"
-        android:id="@+id/textTimer"
-        android:layout_above="@+id/circleButton2"
+        android:id="@+id/bottomText"
+        android:layout_alignParentBottom="true"
+        android:layout_marginBottom="5dp"
+        android:layout_alignParentLeft="false"
+        android:layout_centerHorizontal="true" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Rage Against the Machine"
+        android:id="@+id/titleText"
         android:layout_centerHorizontal="true"
-        android:layout_marginBottom="63dp"
-        android:textSize="20sp" />
+        android:layout_marginTop="20dp" />
+
+    <ImageButton
+        android:layout_width="40dp"
+        android:layout_height="40dp"
+        android:id="@+id/settingsButton"
+        android:src="@drawable/settings"
+        android:scaleType="fitCenter"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentBottom="true"
+        android:background="#00ffffff"
+        android:padding="5dp" />
 
 
 </RelativeLayout>
